syntax = "proto3";

package com.epam.grpc;

service PingPongServer {
  rpc pingPong(PingRequest) returns (PongResponse);
}

message PingRequest {
  string message = 1;
}

message PongResponse {
  string message = 1;
}